<resources>
    <string name="app_name">YouScore</string>
    <string name="channel_name">YouScore</string>
    <string name="channel_description">Notifications for YouScore</string>


    <string name="gameTime">Time</string>
    <string name="location">Location</string>
    <string name="viewGame"> view details</string>
    <string name="gameTitle">Home vs Away</string>
    <string name="position">League Position</string>
    <string name="homePosition">Home Position</string>
    <string name="awayPosition">Away Position</string>
    <string name="team">Team name</string>
    <string name="homeTeam">Home team</string>
    <string name="awayTeam">Away team</string>
    <string name="calender">Add to calender</string>
    <string name="kickOff">kick off time</string>
    <string name="score">score</string>
    <string name="time">in game time</string>
    <string name="selectLeague">Select a league</string>
    <string-array name="leagues">
        <item>Scottish Premiership</item>
        <item>Scottish Premiership Play-offs</item>
        <item>Danish Superliga</item>
        <item>Danish Superliga Play-offs</item>
    </string-array>
    <string name="profile">Your Profile</string>
    <string name="entername">Enter your name</string>
    <string name="name"></string>
    <string name="follow">Follow Match</string>
    <string name="save">save settings</string>
    <string name="welcome">Welcome</string>

    <string name="HomeEvents">home events here</string>
    <string name="AwayEvents">away events here</string>
    <string name="minutes">minute</string>
    <string name="venue">venue name</string>

</resources>