<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameDetails">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="326dp"
        android:layout_height="47dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:text="@string/gameTitle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textAlignment="center" />

    <TextView
        android:id="@+id/positionView"
        android:layout_width="309dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="244dp"
        android:text="@string/position"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/venueView"
        android:layout_width="166dp"
        android:layout_height="29dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:text="@string/location"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/positionView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeView"
        app:layout_constraintVertical_bias="0.38"
        tools:textAlignment="center" />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="24dp"
        android:text="@string/gameTime"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        tools:textAlignment="center" />

    <TextView
        android:id="@+id/homeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/homeTeam"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positionView" />

    <TextView
        android:id="@+id/awayView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="48dp"
        android:text="@string/awayTeam"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positionView" />

    <TextView
        android:id="@+id/homePosView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/homePosition"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeView" />

    <TextView
        android:id="@+id/awayPosView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="28dp"
        android:text="@string/awayPosition"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeView" />

    <Button
        android:id="@+id/calendarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="268dp"
        android:text="@string/calender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positionView" />

</androidx.constraintlayout.widget.ConstraintLayout>