<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userProfile">

    <!-- TODO: Update blank fragment layout -->

    <Spinner
        android:id="@+id/leagueSpinner"
        android:layout_width="187dp"
        android:layout_height="89dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="292dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileTextView"
        android:layout_width="194dp"
        android:layout_height="67dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="54dp"
        android:text="@string/profile"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterNameView"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="28dp"
        android:text="@string/entername"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTextView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enterNameView"
        app:layout_constraintTop_toBottomOf="@+id/profileTextView" />

    <TextView
        android:id="@+id/leagueTextView"
        android:layout_width="110dp"
        android:layout_height="61dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="56dp"
        android:text="@string/selectLeague"
        app:layout_constraintEnd_toStartOf="@+id/leagueSpinner"
        app:layout_constraintTop_toBottomOf="@+id/enterNameView" />

</androidx.constraintlayout.widget.ConstraintLayout>